syntax = "proto2";
option java_package = "io.jaspercloud.sdwan.core.proto";
option java_outer_classname = "SDWanProtos";

enum MessageCode {
  Success = 0;
  Failed = 1;
  SysError = 2;
  NotEnough = 3;
  VipBound = 4;
  NotFound = 5;
}

enum MessageMode {
  ReqResp = 1;
  Push = 2;
}

enum MessageTypeCode {
  //req/resp
  RegistReqType = 101;
  RegistRespType = 102;
  P2pOfferType = 103;
  P2pAnswerType = 104;
  ConfigReqType = 105;
  ConfigRespTpe = 106;
  //push
  NodeInfoListType = 201;
  RouteListType = 202;
  VNATListType = 203;
  NodeOnlineType = 205;
  NodeOfflineType = 206;
  //
  HeartType = 301;
  //oneWay
  UpdateNodeInfoType = 401;
}

enum MappingTypeCode {
  FullCone = 1;
  RestrictedCone = 2;
  PortRestrictedCone = 3;
  Symmetric = 4;
}

message Message {
  required string reqId = 1;
  required MessageMode mode = 2;
  required MessageTypeCode type = 3;
  optional bytes data = 4;
}

enum NodeTypeCode {
  SimpleType = 1;
  MeshType = 2;
}

message SocketAddress {
  required string ip = 1;
  required int32 port = 2;
}

message RegistReq {
  required string tenantId = 1;
  required NodeTypeCode nodeType = 2;
  required string macAddress = 3;
  repeated string addressUri = 4;
}

message RegistResp {
  required MessageCode code = 1;
  optional string vip = 2;
  optional int32 maskBits = 3;
  optional NodeInfoList nodeList = 4;
  optional RouteList routeList = 5;
  optional VNATList vnatList = 6;
  optional RouteRuleList routeRuleList = 7;
}

message NodeInfoReq {
  repeated string addressUri = 1;
}

message NodeInfo {
  required string vip = 1;
  repeated string addressUri = 2;
}

message NodeInfoList {
  repeated NodeInfo nodeInfo = 1;
}

message Route {
  required string destination = 1;
  repeated string nexthop = 3;
}

message RouteList {
  repeated Route route = 1;
}

message RouteRule {
  required string direction = 1;
  repeated string ruleList = 2;
}

message RouteRuleList {
  repeated RouteRule routeRule = 1;
}

message VNAT {
  required string vip = 1;
  required string src = 2;
  required string dst = 3;
}

message VNATList {
  repeated VNAT vnat = 1;
}

message IpPacket {
  required string srcIP = 1;
  required string dstIP = 2;
  required bytes payload = 3;
}

message P2pOffer {
  required string tenantId = 1;
  required string srcVIP = 2;
  required string dstVIP = 3;
  repeated string addressUri = 4;
  required bytes publicKey = 5;
}

message P2pAnswer {
  required string tenantId = 1;
  required MessageCode code = 2;
  required string srcVIP = 3;
  required string dstVIP = 4;
  required bytes publicKey = 5;
}

message ServerConfigReq {
  required string tenantId = 1;
}

message ServerConfigResp {
  required MessageCode code = 1;
  required string stunServer = 2;
  required string relayServer = 3;
  repeated string stunServers = 4;
  repeated string relayServers = 5;
}

message RpcMessage {
  required string id = 1;
  required bytes data = 2;
}
